src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__recursive_initial_constant_values.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: result
---
error: Cannot generate literal initializer for `a`.

error: Could not resolve reference to b
  ┌─ <internal>:3:24
  │
3 │             a : INT := b;
  │                        ^ Could not resolve reference to b


